# OSSDevakPatel

./: CMakeLists.txt  Lab2.md  Lab3.md  Lab4.md  Lab5.md  Lab7.md  TensorFlow.md  bio.md  formula.tex  lab01.md  lab1.md  lab7.md  lab8.md  plotwords.py  plotwords4.py  plotwordsPerm.py
Lab5/static+shared/: CMakeLists.txt  Makefile  dpMakefile
Lab5/step1/: CMakeLists.txt
Lab5/step2/: tutorial.cxx
Lab5/step3/: CMakeListsGlobal.txt  CMakeListsMathFuncs.txt
Lab5/step4/: CMakeListsGlobal.txt
Lab5/step5/: CMakeListsglobal.txt
